[project]
name = "food-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
